--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -50,7 +50,7 @@ exec-once = $terminal
 exec-once = swaybg -i ~/.config/bg.jpg
 exec-once = swww-daemon &
 exec-once = hypridle &
-#exec-once = nm-applet &
+exec-once = nm-applet &
 #exec-once = ~/.config/swayosd/launch.sh &
 #exec-once = ~/scripts/power_supply_notify/inotify_approach/power-event-watcher.sh &
 exec-once = hyprpm reload -n
