--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-
 [[keyboard.bindings]]
 action = "Paste"
 key = "V"
@@ -64,7 +63,7 @@ mode = "~Alt"
 mods = "Shift"
 
 [general]
-import = ["/home/stefan/.config/alacritty/font.toml", "/home/stefan/.config/alacritty/color.toml"]
+import = ["~/.config/alacritty/font.toml", "~/.config/alacritty/color.toml"]
 
 [cursor.style]
 blinking = "On"
@@ -85,8 +84,6 @@ title = "Alacritty"
 general = "Alacritty"
 instance = "Alacritty"
 
- 
-
 [window.padding]
 x = 10
 y = 10
@@ -94,5 +91,3 @@ y = 10
 [window.position]
 x = 0
 y = 0
-
-[keyboard]
