--- a/config/transmission/settings.json
+++ b/config/transmission/settings.json
@@ -22,7 +22,7 @@
     "details-window-height": 500,
     "details-window-width": 700,
     "dht-enabled": true,
-    "download-dir": "/home/stefan/Downloads",
+    "download-dir": "~/Downloads",
     "download-queue-enabled": true,
     "download-queue-size": 5,
     "encryption": 1,
@@ -30,7 +30,7 @@
     "filter-trackers": "",
     "idle-seeding-limit": 30,
     "idle-seeding-limit-enabled": false,
-    "incomplete-dir": "/home/stefan/Downloads",
+    "incomplete-dir": "~/Downloads",
     "incomplete-dir-enabled": false,
     "inhibit-desktop-hibernation": true,
     "lpd-enabled": true,
@@ -41,7 +41,7 @@
     "main-window-x": 0,
     "main-window-y": 0,
     "message-level": 4,
-    "open-dialog-dir": "/home/stefan",
+    "open-dialog-dir": "~/Downloads",
     "peer-congestion-algorithm": "",
     "peer-limit-global": 200,
     "peer-limit-per-torrent": 50,
@@ -60,7 +60,7 @@
     "ratio-limit": 2,
     "ratio-limit-enabled": false,
     "read-clipboard": false,
-    "recent-download-dir-1": "/home/stefan/Downloads",
+    "recent-download-dir-1": "~/Downloads",
     "recent-download-dir-2": "",
     "recent-download-dir-3": "",
     "recent-download-dir-4": "",
