--- a/config/hypr/config/autostart.conf
+++ b/config/hypr/config/autostart.conf
@@ -31,7 +31,7 @@ exec-once = caffeine
 exec-once = hyprctl setcursor Adwaita 24 &
 #exec-once = Telegram -startintray &
 #exec-once = ~/.local/bin/vk-messenger.AppImage
-exec-once = waybar -c ~/.config/waybar/config --style /home/stefan/.config/waybar/style.css && sleep 5
+exec-once = waybar -c ~/.config/waybar/config --style ~/.config/waybar/style.css && sleep 5
 #exec-once = swaync &
 exec-once = mpDris2 &
 #exec-once = pipewire
