--- a/applications/senpai.desktop
+++ b/applications/senpai.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=senpai
-Exec=alacritty -e bash -i -c "senpai"
+Exec=alacritty --class=senpai --title=senpai -e bash -i -c "senpai"
 Terminal=true
 Type=Application
 Comment=senpai
