--- a/config/hypr/config/windows.conf
+++ b/config/hypr/config/windows.conf
@@ -18,3 +18,5 @@ windowrule = size 50% 60%, title:^(Save As|Save a File|Pick Files)$
 windowrule = center, title:^(Save As|Save a File|Pick Files)$
 windowrule = float, initialTitle:(Open Files)
 windowrule = size 70% 60%, initialTitle:(Open Files)
+windowrule = float,class:^(imv)$
+windowrule = float,title:^(Calculator)$
