--- a/config/hypr/config/autostart.conf
+++ b/config/hypr/config/autostart.conf
@@ -6,7 +6,7 @@
 $terminal = alacritty
 $fileManager = nautilus
 $menu = ~/.config/rofi/applaunch/launcher-hypr.sh
-$browser = brave-browser
+$browser = brave-browser-stable
 $scripts = ~/.config/hypr/scripts
 
 #################
