--- a/config/hypr/config/input.conf
+++ b/config/hypr/config/input.conf
@@ -6,7 +6,7 @@ input {
     kb_layout = us,ru
     kb_variant =
     kb_model =
-    kb_options = grp:win_space_toggle
+    kb_options = grp:win_space_toggle, compose:caps
     kb_rules =
     follow_mouse = 1
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
