add senpai icon

--- a/applications/senpai.desktop
+++ b/applications/senpai.desktop
@@ -4,6 +4,6 @@ Exec=alacritty --class=senpai --title=senpai -e bash -i -c "senpai"
 Type=Application
 Comment=senpai
 Terminal=false
-Icon=irc
+Icon=senpai
 Categories=Network;IRCClient;
 Keywords=irc;chat;internet;
