add swayosd to autostart

--- a/config/hypr/config/autostart.conf
+++ b/config/hypr/config/autostart.conf
@@ -21,7 +21,7 @@ exec-once = swaybg -i ~/.config/bg.jpg
 exec-once = swww-daemon &
 exec-once = hypridle &
 exec-once = nm-applet &
-#exec-once = ~/.config/swayosd/launch.sh &
+exec-once = ~/.config/swayosd/launch.sh &
 #exec-once = ~/.config/nwg-dock-hyprland/launch.sh &
 #exec-once = ~/scripts/power_supply_notify/inotify_approach/power-event-watcher.sh &
 exec-once = hyprpm reload -n
@@ -32,6 +32,6 @@ exec-once = hyprctl setcursor Adwaita 24 &
 #exec-once = Telegram -startintray &
 #exec-once = ~/.local/bin/vk-messenger.AppImage
 exec-once = waybar -c ~/.config/waybar/config --style ~/.config/waybar/style.css && sleep 5
-#exec-once = swaync &
+exec-once = swaync &
 exec-once = mpDris2 &
 #exec-once = pipewire
