some rofi changes, add kvantum

--- a/default/.tmux.conf
+++ b/default/.tmux.conf
@@ -27,7 +27,7 @@ set -agF status-right "#{E:@catppuccin_status_cpu}"
 set -ag status-right "#{E:@catppuccin_status_session}"
 set -ag status-right "#{E:@catppuccin_status_uptime}"
 set -agF status-right "#{E:@catppuccin_status_battery}"
-set -g @catppuccin_flavor 'macchiato' # latte, frappe, macchiato or mocha
+set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato or mocha
 #set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'tmux-plugins/tmux-urlview'
