--- a/config/hypr/config/windows.conf
+++ b/config/hypr/config/windows.conf
@@ -20,3 +20,5 @@ windowrule = float, initialTitle:(Open Files)
 windowrule = size 70% 60%, initialTitle:(Open Files)
 windowrule = float,class:^(imv)$
 windowrule = float,title:^(Calculator)$
+windowrule = size 70% 60%,class:^(rmpc)$
+windowrule = float,class:^(rmpc)$
