--- a/config/hypr/config/autostart.conf
+++ b/config/hypr/config/autostart.conf
@@ -17,11 +17,11 @@ $scripts = ~/.config/hypr/scripts
 # Or execute your favorite apps at launch like this:
 
 exec-once = $terminal
-exec-once = swaybg -i ~/.config/bg.jpg
 exec-once = swww-daemon &
 exec-once = hypridle &
 exec-once = nm-applet &
 exec-once = ~/.config/swayosd/launch.sh &
+exec-once = omvoid-cmd-first-run 
 #exec-once = ~/.config/nwg-dock-hyprland/launch.sh &
 #exec-once = ~/scripts/power_supply_notify/inotify_approach/power-event-watcher.sh &
 exec-once = hyprpm reload -n
