--- a/config/hypr/config/envs.conf
+++ b/config/hypr/config/envs.conf
@@ -7,10 +7,27 @@
 env = XCURSOR_SIZE,24
 #env = HYPRCURSOR_THEME,volantes
 #env = HYPRCURSOR_SIZE,24
-env = QT_QPA_PLATFORMTHEME,qt5ct
+#env = QT_QPA_PLATFORMTHEME,qt5ct
 
 #env = QT_QPA_PLATFORM,wayland;xcb
 #env = GDK_BACKEND,wayland,x11,*
 #env = XDG_CURRENT_DESKTOP,Hyprland
 #env = XDG_SESSION_TYPE,wayland
-#env = XDG_SESSION_DESKTOP,Hyprland
+#env = XDG_SESSION_DESKTOP,hyprland
+
+# Force all apps to use Wayland
+env = GDK_BACKEND,wayland,x11,*
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_STYLE_OVERRIDE,kvantum
+env = SDL_VIDEODRIVER,wayland
+env = MOZ_ENABLE_WAYLAND,1
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+env = OZONE_PLATFORM,wayland
+
+# Use XCompose file
+env = XCOMPOSEFILE,~/.XCompose
+
+# Don't show update on first launch
+ecosystem {
+  no_update_news = true
+}
