--- a/config/hypr/config/windows.conf
+++ b/config/hypr/config/windows.conf
@@ -22,3 +22,5 @@ windowrule = float,class:^(imv)$
 windowrule = float,title:^(Calculator)$
 windowrule = size 80% 67%,class:^(rmpc)$
 windowrule = float,class:^(rmpc)$
+windowrule = float,class:^(waypaper)$
+
