some style changes

--- a/config/hypr/config/windows.conf
+++ b/config/hypr/config/windows.conf
@@ -11,6 +11,9 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
+# Just dash of opacity by default
+windowrule = opacity 0.97 0.9, class:.*
+
 windowrule = opacity 0.8, class:^(org.gnome.Nautilus)$
 windowrule = opacity 0.9 override 0.7 override 1 override, class:^(discord|vesktop|org.telegram.desktop)$
 windowrule = float, title:^(Save As|Save a File|Pick Files)$
@@ -24,3 +27,16 @@ windowrule = size 80% 67%,class:^(rmpc)$
 windowrule = float,class:^(rmpc)$
 windowrule = float,class:^(waypaper)$
 
+# Browser types
+windowrule = tag +chromium-based-browser, class:([cC]hrom(e|ium)|[bB]rave-browser|Microsoft-edge|Vivaldi-stable)
+windowrule = tag +firefox-based-browser, class:(Firefox|zen|librewolf)
+
+# Force chromium-based browsers into a tile to deal with --app bug
+windowrule = tile, tag:chromium-based-browser
+
+# Only a subtle opacity change, but not for video sites
+windowrule = opacity 1 0.97, tag:chromium-based-browser
+windowrule = opacity 1 0.97, tag:firefox-based-browser
+
+# Some video sites should never have opacity applied to them
+windowrule = opacity 1.0 1.0, initialTitle:(youtube\.com_/|app\.zoom\.us_/wc/home)
