add webapp launch script

--- a/applications/rmpc.desktop
+++ b/applications/rmpc.desktop
@@ -4,6 +4,6 @@ Exec=kitty --class=rmpc -o font_size=12 --title=rmpc -e bash -i -c "rmpc"
 Type=Application
 Comment=rmpc
 Terminal=false
-Icon=audio-player
+Icon=beatbox
 Categories=Music;
 Keywords=music;player;
