add waypaper option MOD+SHIFT+W

--- a/config/hypr/config/keybindings.conf
+++ b/config/hypr/config/keybindings.conf
@@ -19,6 +19,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, O, exec, $menu
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, W, exec, $HOME/.config/rofi/wallpaper/wallpaper-hypr.sh
+bind = $mainMod SHIFT, W, exec, waypaper
 bind = $mainMod, N, exec, $HOME/scripts/rofi_notes.sh
 bind = $mainMod, T, exec, setsid -f kitty -e $HOME/scripts/tmux-start.sh
 bind = $mainMod, P, pseudo, # dwindle
