--- a/default/.tmux.conf
+++ b/default/.tmux.conf
@@ -6,7 +6,7 @@ set -g mouse on
 set -g allow-passthrough on
 set-option -g status-position top
 set -ag terminal-overrides ",xterm-256color:RGB"
-set -g default-terminal "xterm-256color"
+#set -g default-terminal "tmux-256color"
 # Start windows and panes at 1, not 0
 set -g base-index 1
 # setw -g pane-base-index 0
@@ -28,6 +28,12 @@ set -ag status-right "#{E:@catppuccin_status_session}"
 set -ag status-right "#{E:@catppuccin_status_uptime}"
 set -agF status-right "#{E:@catppuccin_status_battery}"
 set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato or mocha
+
+# Show window titles in catppuccin
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_text "#W"
+set -g @catppuccin_window_current_text "#W"
+
 #set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'tmux-plugins/tmux-urlview'
