--- a/config/hypr/config/windows.conf
+++ b/config/hypr/config/windows.conf
@@ -40,3 +40,17 @@ windowrule = opacity 1 0.97, tag:firefox-based-browser
 
 # Some video sites should never have opacity applied to them
 windowrule = opacity 1.0 1.0, initialTitle:(youtube\.com_/|app\.zoom\.us_/wc/home)
+
+# Floating windows
+windowrule = float, tag:floating-window
+windowrule = center, tag:floating-window
+windowrule = size 800 600, tag:floating-window
+
+windowrule = tag +floating-window, class:(blueberry.py|Impala|Wiremix|org.gnome.NautilusPreviewer|com.gabm.satty|About|TUI.float)
+windowrule = tag +floating-window, class:(xdg-desktop-portal-gtk|sublime_text|DesktopEditors|org.gnome.Nautilus), title:^(Open.*Files?|Open Folder|Save.*Files?|Save.*As|Save|All Files)
+
+# Fullscreen screensaver
+windowrule = fullscreen, class:Screensaver
+
+# No transparency on media windows
+windowrule = opacity 1 1, class:^(zoom|vlc|mpv|org.kde.kdenlive|com.obsproject.Studio|com.github.PintaProject.Pinta|imv|org.gnome.NautilusPreviewer)$
