add some window rules for hyprland

--- a/config/hypr/config/windows.conf
+++ b/config/hypr/config/windows.conf
@@ -22,7 +22,7 @@ windowrule = center, title:^(Save As|Save a File|Pick Files)$
 windowrule = float, initialTitle:(Open Files)
 windowrule = size 70% 60%, initialTitle:(Open Files)
 windowrule = float,class:^(imv)$
-windowrule = float,title:^(Calculator)$
+windowrule = float,class:^(org.gnome.Calculator)
 windowrule = size 80% 67%,class:^(rmpc)$
 windowrule = float,class:^(rmpc)$
 windowrule = float,class:^(waypaper)$
