Add script and udev rule to notify when power cable is disconnected
fix it

change to bash

remove extension

remove this

--- a/config/hypr/config/autostart.conf
+++ b/config/hypr/config/autostart.conf
@@ -23,7 +23,7 @@ exec-once = nm-applet &
 exec-once = ~/.config/swayosd/launch.sh &
 exec-once = omvoid-cmd-first-run 
 #exec-once = ~/.config/nwg-dock-hyprland/launch.sh &
-#exec-once = ~/scripts/power_supply_notify/inotify_approach/power-event-watcher.sh &
+exec-once = omvoid-power-event-watcher.sh &
 exec-once = hyprpm reload -n
 exec-once = caffeine 
 #exec-once = transmission-qt
