sddm background fix. add cronie service

--- a/config/hypr/config/autostart.conf
+++ b/config/hypr/config/autostart.conf
@@ -23,7 +23,7 @@ exec-once = nm-applet &
 exec-once = ~/.config/swayosd/launch.sh &
 exec-once = omvoid-cmd-first-run 
 #exec-once = ~/.config/nwg-dock-hyprland/launch.sh &
-exec-once = omvoid-power-event-watcher.sh &
+exec-once = ~/.local/share/omvoid/bin/omvoid-power-event-watcher &
 exec-once = hyprpm reload -n
 exec-once = caffeine 
 #exec-once = transmission-qt
