add some window rules, pipewire per user config

--- a/config/hypr/config/windows.conf
+++ b/config/hypr/config/windows.conf
@@ -14,7 +14,7 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 # Just dash of opacity by default
 windowrule = opacity 0.97 0.9, class:.*
 
-windowrule = opacity 0.8, class:^(org.gnome.Nautilus)$
+windowrule = opacity 0.85, class:^(org.gnome.Nautilus)$
 windowrule = opacity 0.9 override 0.7 override 1 override, class:^(discord|vesktop|org.telegram.desktop)$
 windowrule = float, title:^(Save As|Save a File|Pick Files)$
 windowrule = size 50% 60%, title:^(Save As|Save a File|Pick Files)$
@@ -44,9 +44,9 @@ windowrule = opacity 1.0 1.0, initialTitle:(youtube\.com_/|app\.zoom\.us_/wc/hom
 # Floating windows
 windowrule = float, tag:floating-window
 windowrule = center, tag:floating-window
-windowrule = size 800 600, tag:floating-window
+windowrule = size 900 700, tag:floating-window
 
-windowrule = tag +floating-window, class:(blueberry.py|Impala|Wiremix|org.gnome.NautilusPreviewer|com.gabm.satty|Omvoid|About|TUI.float)
+windowrule = tag +floating-window, class:(blueberry.py|Impala|Wiremix|org.pulseaudio.pavucontrol|org.gnome.NautilusPreviewer|com.gabm.satty|Omvoid|top|About|TUI.float)
 windowrule = tag +floating-window, class:(xdg-desktop-portal-gtk|sublime_text|DesktopEditors|org.gnome.Nautilus), title:^(Open.*Files?|Open Folder|Save.*Files?|Save.*As|Save|All Files)
 
 # Fullscreen screensaver
