--- a/config/waybar/config
+++ b/config/waybar/config
@@ -98,9 +98,9 @@
     },
 
   "custom/screenshot": {
-	    "on-click": "~/.config/hypr/scripts/screenshot.sh",
-      "on-click-middle": "setsid -f alacritty -e ~/.config/hypr/scripts/screenrecord.sh",
-      "on-click-right": "~/.config/hypr/scripts/screenshot_clipboard.sh",
+	    "on-click": "omvoid-cmd-screenshot",
+      "on-click-middle": "setsid -f alacritty -e omvoid-cmd-screenrecord region audio",
+      "on-click-right": "omvoid-cmd-screenshot clipboard",
 	    "format": "",
     },
 
