--- a/config/hypr/config/autostart.conf
+++ b/config/hypr/config/autostart.conf
@@ -34,4 +34,7 @@ exec-once = hyprctl setcursor Adwaita 24 &
 exec-once = waybar -c ~/.config/waybar/config --style ~/.config/waybar/style.css && sleep 5
 exec-once = swaync &
 exec-once = mpDris2 &
+exec-once = wl-clip-persist --clipboard regular
+exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 #exec-once = pipewire
