--- a/config/hypr/config/windows.conf
+++ b/config/hypr/config/windows.conf
@@ -46,7 +46,7 @@ windowrule = float, tag:floating-window
 windowrule = center, tag:floating-window
 windowrule = size 900 700, tag:floating-window
 
-windowrule = tag +floating-window, class:(blueberry.py|Impala|Wiremix|org.pulseaudio.pavucontrol|org.gnome.NautilusPreviewer|com.gabm.satty|Omvoid|top|About|TUI.float)
+windowrule = tag +floating-window, class:(blueberry.py|Impala|Wiremix|org.pulseaudio.pavucontrol|org.gnome.NautilusPreviewer|com.gabm.satty|Omvoid|top|spek|About|TUI.float)
 windowrule = tag +floating-window, class:(xdg-desktop-portal-gtk|sublime_text|DesktopEditors|org.gnome.Nautilus), title:^(Open.*Files?|Open Folder|Save.*Files?|Save.*As|Save|All Files)
 
 # Fullscreen screensaver
