--- a/config/waybar/config
+++ b/config/waybar/config
@@ -230,16 +230,36 @@
       "on-scroll-down": "pactl set-sink-mute 0 false ; pactl set-sink-volume 0 +3%",
   },
 
-  "battery": {
-	    "bat": "BAT0",
-	    "interval": 60,
-      "states": {
-          "warning": 30,
-          "critical": 15
-          },
-	    "format": "{icon} {capacity}%",
-    	"format-icons": ["", "", "", "", ""],
-    	"tooltip": false,
-   },
+  "battery": { 
+	  "bat": "BAT0",
+	  "format": "{icon} {capacity}%",
+    "format-discharging": "{icon}",
+    "format-charging": "{icon}",
+    "format-plugged": "",
+    "format-icons": {
+      "charging": ["󰢜", "󰂆", "󰂇", "󰂈", "󰢝", "󰂉", "󰢞", "󰂊", "󰂋", "󰂅"],
+      "default": ["󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"],
+      "alt": ["", "", "", "", ""],  
+    },
+    "tooltip-format-discharging": "{power:>1.0f}W↓ {capacity}%",
+    "tooltip-format-charging": "{power:>1.0f}W↑ {capacity}%",
+    "interval": 30,
+    "states": {
+      "warning": 20,
+      "critical": 10
+    }
+  },
 
+  "group/tray-expander": {
+    "orientation": "inherit",
+    "drawer": {
+      "transition-duration": 600,
+      "children-class": "tray-group-item"
+    },
+    "modules": ["custom/expand-icon", "tray"]
+  },
+   "custom/expand-icon": {
+    "format": " ",
+    "tooltip": false
+  },
 }
