--- a/config/alacritty/font.toml
+++ b/config/alacritty/font.toml
@@ -6,12 +6,13 @@ y = 0
 size = 14.5
 
 # Normal font style
-normal = { family = "JetBrainsMonoNerdFont", style = "Regular" }  # Default for Linux/BSD: "monospace", Regular
+normal = { family = "JetBrainsMono Nerd Font", style = "Regular" }  # Default for Linux/BSD: "monospace", Regular
+
 # Bold font style
-bold = { style = "Bold" }  # Inherits family from normal, Default style: Bold
+bold = { family = "JetBrainsMono Nerd Font", style = "Bold" }  # Inherits family from normal, Default style: Bold
 
 # Italic font style
-italic = { style = "Italic" }  # Inherits family from normal, Default style: Italic
+italic = { family = "JetBrainsMono Nerd Font", style = "Italic" }  # Inherits family from normal, Default style: Italic
 
 # Bold Italic font style
-bold_italic = { style = "Bold Italic" }  # Inherits family from normal, Default style: Bold Italic
+bold_italic = { family = "JetBrainsMono Nerd Font", style = "Bold Italic" }  # Inherits family from normal, Default style: Bold Italice = "Bold Italic" }  # Inherits family from normal, Default style: Bold Italic
