--- a/config/hypr/config/autostart.conf
+++ b/config/hypr/config/autostart.conf
@@ -33,8 +33,9 @@ exec-once = hyprctl setcursor Adwaita 24 &
 #exec-once = ~/.local/bin/vk-messenger.AppImage
 exec-once = waybar -c ~/.config/waybar/config --style ~/.config/waybar/style.css && sleep 5
 exec-once = swaync &
-exec-once = mpDris2 &
+exec-once = mpdris2-rc
 exec-once = wl-clip-persist --clipboard regular
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
+exec-once = nextcloud --background
 #exec-once = pipewire
