--- a/config/hypr/config/autostart.conf
+++ b/config/hypr/config/autostart.conf
@@ -33,9 +33,10 @@ exec-once = hyprctl setcursor Adwaita 24 &
 #exec-once = ~/.local/bin/vk-messenger.AppImage
 exec-once = waybar -c ~/.config/waybar/config --style ~/.config/waybar/style.css && sleep 5
 exec-once = swaync &
-exec-once = mpdris2-rc
+exec-once = mpdris2-rs
 exec-once = wl-clip-persist --clipboard regular
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-exec-once = nextcloud --background
+#exec-once = nextcloud --background
+#exec-once = runsvdir -P ~/.config/service
 #exec-once = pipewire
