--- a/config/hypr/config/keybindingsSwayOSD.conf
+++ b/config/hypr/config/keybindingsSwayOSD.conf
@@ -24,7 +24,7 @@ bind = $mainMod, N, exec, $HOME/scripts/rofi_notes.sh
 bind = $mainMod, T, exec, setsid -f kitty -e $HOME/scripts/tmux-start.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, Y, FULLSCREEN, 0
-bind = $mainMod, A, exec, omvoid-audioswitcher-precise
+bind = $mainMod, A, exec, omvoid-audioswitcher
 #bind = $mainMod SUPER, V, exec, cliphist list | rofi -dmenu -display-columns 2 -theme ~/.config/rofi/menu-style.rasi | cliphist decode | wl-copy
 bind = $mainMod SUPER, V, exec, rofi -modi clipboard:cliphist-rofi-img -show clipboard -show-icons -theme ~/.config/rofi/menu-style-clipboard.rasi
 bind = $mainMod, J, togglesplit, # dwindle
