--- a/config/waybar/config
+++ b/config/waybar/config
@@ -2,7 +2,8 @@
 	"layer": "top",
 	"position": "top",
 	"height": 30,
-	"width": 1525,
+  "margin-left": 6,
+  "margin-right": 6,
 	"margin-top": 5,
 
   "modules-center": ["mpd"],
