--- a/config/waybar/config
+++ b/config/waybar/config
@@ -6,9 +6,9 @@
   "margin-right": 6,
 	"margin-top": 5,
 
-  "modules-center": ["custom/screenrecording-indicator", "mpd"],
+  "modules-center": ["mpd"],
   "modules-left": ["custom/menu", "custom/sep", "hyprland/workspaces", "custom/sep", "hyprland/window"],
-  "modules-right": ["tray", "cpu", "memory", "custom/hdd", "custom/temperature", "custom/weather", "custom/updates", "battery", "hyprland/language", "custom/screenshot", "clock", "custom/swaync", "custom/wlogout"],
+  "modules-right": ["tray", "cpu", "memory", "custom/hdd", "custom/temperature", "custom/weather", "custom/updates", "battery", "hyprland/language", "custom/screenrecording-indicator", "custom/screenshot", "clock", "custom/swaync", "custom/wlogout"],
 
   "custom/temperature": {
       "format": "{}",
