add firewatch theme and remove transmission-daemon from services

--- a/config/transmission/settings.json
+++ b/config/transmission/settings.json
@@ -22,7 +22,7 @@
     "details-window-height": 500,
     "details-window-width": 700,
     "dht-enabled": true,
-    "download-dir": "~/Downloads",
+    "download-dir": "/home/stefan/Downloads",
     "download-queue-enabled": true,
     "download-queue-size": 5,
     "encryption": 1,
@@ -30,14 +30,14 @@
     "filter-trackers": "",
     "idle-seeding-limit": 30,
     "idle-seeding-limit-enabled": false,
-    "incomplete-dir": "~/Downloads",
+    "incomplete-dir": "/home/stefan/Downloads",
     "incomplete-dir-enabled": false,
     "inhibit-desktop-hibernation": true,
     "lpd-enabled": true,
-    "main-window-height": 857,
+    "main-window-height": 911,
     "main-window-is-maximized": true,
     "main-window-layout-order": "menu,toolbar,filter,list,statusbar",
-    "main-window-width": 1522,
+    "main-window-width": 757,
     "main-window-x": 0,
     "main-window-y": 0,
     "message-level": 4,
@@ -64,7 +64,7 @@
     "recent-download-dir-2": "",
     "recent-download-dir-3": "",
     "recent-download-dir-4": "",
-    "remote-session-enabled": true,
+    "remote-session-enabled": false,
     "remote-session-host": "localhost",
     "remote-session-https": false,
     "remote-session-password": "",
