--- a/config/hypr/config/autostart.conf
+++ b/config/hypr/config/autostart.conf
@@ -22,7 +22,7 @@ exec-once = hypridle &
 exec-once = ~/.config/swayosd/launch.sh &
 exec-once = omvoid-cmd-first-run 
 exec-once = ~/.config/nwg-dock-hyprland/launch.sh &
-exec-once = ~/.local/share/omvoid/bin/omvoid-power-event-watcher &
+exec-once = omvoid-powerevent-monitor &
 exec-once = hyprpm reload -n
 exec-once = caffeine 
 exec-once = hyprctl setcursor Adwaita 24 &
