--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -23,7 +23,7 @@
       <string>sans-serif</string>
     </test>
     <edit name="family" mode="assign" binding="strong">
-      <string>Noto Sans</string>
+      <string>Noto Sans</string>      
     </edit>
   </match>
   <match target="pattern">
@@ -42,6 +42,12 @@
       <string>CaskaydiaMono Nerd Font</string>
     </edit>
   </match>
+  <alias>
+    <family>emoji</family>
+    <prefer>
+      <family>Noto Color Emoji</family>
+    </prefer>
+  </alias>
   <alias>
     <family>system-ui</family>
     <prefer>
