add swayosd notification for keyboard backlight

--- a/config/hypr/config/keybindingsSwayOSD.conf
+++ b/config/hypr/config/keybindingsSwayOSD.conf
@@ -85,8 +85,8 @@ bindel = ,XF86MonBrightnessUp, exec, swayosd-client --brightness +10
 bindel = ,XF86MonBrightnessDown, exec, swayosd-client --brightness -10
 
 # increase/decrease keyboard brightness for Mac
-bindel = ,XF86KbdBrightnessUp, exec, kbdlight up
-bindel = ,XF86KbdBrightnessDown, exec, kbdlight down
+bindel = ,XF86KbdBrightnessUp, exec, ~/.config/hypr/scripts/kbdbacklight.sh up
+bindel = ,XF86KbdBrightnessDown, exec, ~/.config/hypr/scripts/kbdbacklight.sh down
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
