--- a/config/hypr/config/keybindings.conf
+++ b/config/hypr/config/keybindings.conf
@@ -25,6 +25,7 @@ bind = $mainMod, T, exec, setsid -f kitty -e $HOME/scripts/tmux-start.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, Y, FULLSCREEN, 0
 bind = $mainMod, A, exec, omvoid-audioswitcher
+bind = $mainMod, R, exec, omvoid-cmd-radio
 #bind = $mainMod SUPER, V, exec, cliphist list | rofi -dmenu -display-columns 2 -theme ~/.config/rofi/menu-style.rasi | cliphist decode | wl-copy
 bind = $mainMod SUPER, V, exec, rofi -modi clipboard:cliphist-rofi-img -show clipboard -show-icons -theme ~/.config/rofi/menu-style-clipboard.rasi
 bind = $mainMod, J, togglesplit, # dwindle
@@ -94,3 +95,4 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+
