--- a/config/hypr/config/autostart.conf
+++ b/config/hypr/config/autostart.conf
@@ -5,7 +5,7 @@
 # Set programs that you use
 $terminal = alacritty
 $fileManager = nautilus
-$menu = ~/.config/rofi/applaunch/launcher-hypr.sh
+$menu = omvoid-app-menu 
 $browser = brave-browser-stable
 $scripts = ~/.config/hypr/scripts
 
