--- a/config/hypr/config/keybindingsSwayOSD.conf
+++ b/config/hypr/config/keybindingsSwayOSD.conf
@@ -20,8 +20,8 @@ bind = $mainMod, O, exec, $menu
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, W, exec, $HOME/.config/rofi/wallpaper/wallpaper-hypr.sh
 bind = $mainMod SHIFT, W, exec, waypaper
-bind = $mainMod, N, exec, $HOME/scripts/rofi_notes.sh
-bind = $mainMod, T, exec, setsid -f kitty -e $HOME/scripts/tmux-start.sh
+bind = $mainMod, N, exec, rofi_notes.sh
+bind = $mainMod, T, exec, tmux-start.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, Y, FULLSCREEN, 0
 bind = $mainMod, A, exec, omvoid-audioswitcher
