--- a/default/.tmux.conf
+++ b/default/.tmux.conf
@@ -44,8 +44,8 @@ set -g @plugin 'tmux-plugins/tmux-urlview'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
 set -g status-interval 60
-WEATHER='#(curl -s wttr.in/Moscow\?format\="+%%c%%t&period=60")'
-set -g status-left "$WEATHER  "
+WEATHER='#(curl -sf wttr.in/Moscow\?format\="%%c%%t&period=60" | sed -e "s/+//" -e "s/\ //")'
+set -g status-left " $WEATHER "
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
