mpris block to waybar

--- a/config/hypr/config/autostart.conf
+++ b/config/hypr/config/autostart.conf
@@ -6,7 +6,7 @@
 $terminal = alacritty
 $fileManager = nautilus
 $menu = omvoid-app-menu 
-$browser = brave-browser-stable
+$browser = zen 
 $scripts = ~/.config/hypr/scripts
 
 #################
