--- a/config/hypr/config/keybindingsSwayOSD.conf
+++ b/config/hypr/config/keybindingsSwayOSD.conf
@@ -3,7 +3,7 @@
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = ALT # Sets "Windows" key as main modifier
+$mainMod = ALT 
 # disable 3finger paste
 bind = , mouse:274, exec, ;
 
@@ -21,7 +21,7 @@ bind = $mainMod, B, exec, $browser
 bind = $mainMod, W, exec, $HOME/.config/rofi/wallpaper/wallpaper-hypr.sh
 bind = $mainMod SHIFT, W, exec, waypaper
 bind = $mainMod, N, exec, rofi_notes.sh
-bind = $mainMod, T, exec, tmux-start.sh
+bind = $mainMod, T, exec, setsid -f kitty -e tmux-start.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, Y, FULLSCREEN, 0
 bind = $mainMod, A, exec, omvoid-audioswitcher
