--- a/config/hypr/config/keybindings.conf
+++ b/config/hypr/config/keybindings.conf
@@ -3,7 +3,7 @@
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = ALT # Sets "Windows" key as main modifier
+$mainMod = ALT 
 # disable 3finger paste
 bind = , mouse:274, exec, ;
 
