--- a/config/hypr/config/keybindings.conf
+++ b/config/hypr/config/keybindings.conf
@@ -15,7 +15,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, L, exec, $scripts/lock.sh # [MOD + L] - Lock
-bind = $mainMod, V, togglefloating,
+bind = $mainMod SHIFT, V, togglefloating,
 bind = $mainMod, O, exec, $menu
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, W, exec, $HOME/.config/rofi/wallpaper/wallpaper-hypr.sh
@@ -27,7 +27,7 @@ bind = $mainMod, Y, FULLSCREEN, 0
 bind = $mainMod, A, exec, omvoid-audioswitcher
 bind = $mainMod, R, exec, omvoid-cmd-radio
 #bind = $mainMod SUPER, V, exec, cliphist list | rofi -dmenu -display-columns 2 -theme ~/.config/rofi/menu-style.rasi | cliphist decode | wl-copy
-bind = $mainMod SUPER, V, exec, rofi -modi clipboard:cliphist-rofi-img -show clipboard -show-icons -theme ~/.config/rofi/menu-style-clipboard.rasi
+bind = $mainMod, V, exec, rofi -modi clipboard:cliphist-rofi-img -show clipboard -show-icons -theme ~/.config/rofi/menu-style-clipboard.rasi
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, M, exec, nwg-dock-hyprland
 #bind = SUPER, A, hyprexpo:expo, toggle
