More UI improvements

--- a/config/hypr/config/windows.conf
+++ b/config/hypr/config/windows.conf
@@ -15,6 +15,7 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 windowrule = opacity 0.97 0.9, class:.*
 
 windowrule = opacity 0.85, class:^(org.gnome.Nautilus)$
+windowrule = opacity 0.9, class:^(Cider)$
 windowrule = opacity 0.9 override 0.7 override 1 override, class:^(discord|vesktop|org.telegram.desktop)$
 windowrule = float, title:^(Save As|Save a File|Pick Files)$
 windowrule = size 50% 60%, title:^(Save As|Save a File|Pick Files)$
