--- a/config/mako/config
+++ b/config/mako/config
@@ -6,7 +6,7 @@ height=110
 padding=10
 border-size=2
 border-radius=24
-font=JetBrainsMono Nerd Font 12
+font=CaskaydiaMono Nerd Font
 max-icon-size=92
 
 [app-name=Spotify]
