--- a/config/hypr/config/keybindingsSwayOSD.conf
+++ b/config/hypr/config/keybindingsSwayOSD.conf
@@ -14,8 +14,9 @@ bind = $mainMod, Q, exec, wlogout
 bind = $mainMod, C, killactive,
 bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, F, exec, $fileManager
+bind = SUPER, F, exec, setsid -f kitty -e yazi
 bind = $mainMod, L, exec, $scripts/lock.sh # [MOD + L] - Lock
-bind = $mainMod SHIFT, V, togglefloating,
+bind = $mainMod SHIFT, SPACE, togglefloating,
 bind = $mainMod, O, exec, $menu
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, W, exec, $HOME/.config/rofi/wallpaper/wallpaper-hypr.sh
