--- a/default/.tmux.conf
+++ b/default/.tmux.conf
@@ -1,52 +1,72 @@
-# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
-# Prefix + I = install
 unbind r
 bind r source-file ~/.tmux.conf
 set -g mouse on
 set -g allow-passthrough on
 set-option -g status-position top
 set -ag terminal-overrides ",xterm-256color:RGB"
-#set -g default-terminal "tmux-256color"
-# Start windows and panes at 1, not 0
 set -g base-index 1
-# setw -g pane-base-index 0
-#set -g default-terminal "screen-256color"
-#set -g prefix C-s
+set -g status-left-length 100
+set -g status-left "#[fg=default,bg=yellow]    #[fg=black]#[fg=white,bg=black] 󰰦 󰰑 󰰩 󰰲 #[fg=black,bg=default] "
+set -g status-right '#[fg=black]#[fg=white,bg=black] #W #[fg=black,bg=blue]#[fg=blue,bg=blue]#[fg=black,bg=blue] [%H:%M] #[fg=blue,bg=yellow]#[fg=default,bg=yellow] 🐱 '
+setw -g window-status-format '#[fg=blue]#[fg=black,bg=blue]#I#[fg=blue,bg=default] #[fg=black,bg=default]#W'
+setw -g window-status-current-format '#[fg=black]#[fg=white,bg=black] #I: #W #[fg=black,bg=default]'
+
+# set -g prefix C-s
 # bind-key h select-pane -L
 # bind-key j select-pane -D
 # bind-key k select-pane -U
 # bind-key l select-pane -R
-# List of plugins
+
+################################################
+################# Plugins ######################
+################################################
+
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux'
-set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -agF status-right "#{E:@catppuccin_status_cpu}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
-set -agF status-right "#{E:@catppuccin_status_battery}"
-set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato or mocha
 
+################################################
+### 'joshmedeski/tmux-nerd-font-window-name' ###
+################################################
+
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+
+################################################
+############## 'catppuccin/tmux' ###############
+################################################
+
+# set -g @plugin 'catppuccin/tmux'
+# set -g status-right-length 100
+# set -g status-left-length 100
+# set -g status-left ""
+# set -g status-right "#{E:@catppuccin_status_application}"
+# set -agF status-right "#{E:@catppuccin_status_cpu}"
+# set -ag status-right "#{E:@catppuccin_status_session}"
+# set -ag status-right "#{E:@catppuccin_status_uptime}"
+# set -agF status-right "#{E:@catppuccin_status_battery}"
+# set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato or mocha
 # Show window titles in catppuccin
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_text "#W"
-set -g @catppuccin_window_current_text "#W"
+# set -g @catppuccin_window_default_text "#W"
+# set -g @catppuccin_window_text "#W"
+# set -g @catppuccin_window_current_text "#W"
 
-#set -g @plugin 'tmux-plugins/tmux-sensible'
+################################################
+######### 'tmux-plugins/tmux-urlview' ##########
+################################################
 
 set -g @plugin 'tmux-plugins/tmux-urlview'
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
 
-set -g status-interval 60
-LOCATION=Moscow
-WEATHER='#(curl -sf wttr.in/$LOCATION\?format\="%%c%%t&period=60" | sed -e "s/+//" -e "s/\ //")'
-set -g status-left " $WEATHER "
+################################################
+################## WEATHER #####################
+################################################
+
+# Weather:
+# set -g status-interval 60
+# LOCATION=Moscow
+# WEATHER='#(curl -sf wttr.in/$LOCATION\?format\="%%c%%t&period=60" | sed -e "s/+//" -e "s/\ //")'
+# set -g status-left " $WEATHER #[fg=black]#[fg=white,bg=black] #[fg=black,bg=default]"
+
+################################################
+################################################
+################################################
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
