--- a/config/hypr/config/windows.conf
+++ b/config/hypr/config/windows.conf
@@ -27,6 +27,7 @@ windowrule = float,class:^(org.gnome.Calculator)
 windowrule = size 80% 67%,class:^(rmpc)$
 windowrule = float,class:^(rmpc)$
 windowrule = float,class:^(waypaper)$
+windowrule = opacity 0.87, class:^(kitty)$
 
 # Browser types
 windowrule = tag +chromium-based-browser, class:([cC]hrom(e|ium)|[bB]rave-browser|Microsoft-edge|Vivaldi-stable)
