--- a/default/.tmux.conf
+++ b/default/.tmux.conf
@@ -10,7 +10,8 @@ set -g status-left "#[fg=yellow,bg=black]#[fg=default,bg=yellow]   #[fg=bl
 #set -g status-right '#[fg=black]#[fg=white,bg=black] #W #[fg=black,bg=default]#[fg=default,bg=default]  [%H:%M] #[fg=yellow]#[fg=default,bg=yellow] 🐱 '
 #set -g status-right '#[fg=black]#[fg=white,bg=black] #W #[fg=black,bg=blue]#[fg=blue,bg=blue]#[fg=black,bg=blue] [%H:%M] #[fg=blue,bg=yellow]#[fg=default,bg=yellow] 🐱 '
 set -g status-right '#[fg=black]#[fg=white,bg=black] #W #[fg=black,bg=blue]#[fg=blue,bg=blue]#[fg=black,bg=blue] %H:%M #[fg=blue,bg=yellow]#[fg=default,bg=yellow] 󰥳 #[fg=yellow,bg=black]'
-setw -g window-status-format '#[fg=blue]#[fg=black,bg=blue] #I #[fg=blue,bg=default] #[fg=black,bg=default]#W'
+setw -g window-status-format '#[fg=yellow]#[fg=black,bg=yellow] #(tmux-icons.sh #I) #[fg=yellow,bg=default] #[fg=black,bg=default]#W'
+#setw -g window-status-format '#(tmux-icons.sh #I) #[fg=black,bg=default]#W'
 setw -g window-status-current-format '#[fg=black]#[fg=white,bg=black] #I: #W #[fg=black,bg=default]'
 
 # set -g prefix C-s
