--- a/default/.tmux.conf
+++ b/default/.tmux.conf
@@ -6,19 +6,31 @@ set-option -g status-position top
 set -ag terminal-overrides ",xterm-256color:RGB"
 set -g base-index 1
 set -g status-left-length 100
-set -g status-left "#[fg=yellow,bg=black]#[fg=default,bg=yellow]   #[fg=black]#[fg=white,bg=black] 󰰦 󰰑 󰰩 󰰲 #[fg=black,bg=default] "
-#set -g status-right '#[fg=black]#[fg=white,bg=black] #W #[fg=black,bg=default]#[fg=default,bg=default]  [%H:%M] #[fg=yellow]#[fg=default,bg=yellow] 🐱 '
-#set -g status-right '#[fg=black]#[fg=white,bg=black] #W #[fg=black,bg=blue]#[fg=blue,bg=blue]#[fg=black,bg=blue] [%H:%M] #[fg=blue,bg=yellow]#[fg=default,bg=yellow] 🐱 '
-set -g status-right '#[fg=black]#[fg=white,bg=black] #W #[fg=black,bg=blue]#[fg=blue,bg=blue]#[fg=black,bg=blue] %H:%M #[fg=blue,bg=yellow]#[fg=default,bg=yellow] 󰥳 #[fg=yellow,bg=black]'
-setw -g window-status-format '#[fg=yellow]#[fg=black,bg=yellow] #(omvoid-tmux-icons-helper #I) #[fg=yellow,bg=default] #[fg=black,bg=default]#W'
-#setw -g window-status-format '#(tmux-icons.sh #I) #[fg=black,bg=default]#W'
-setw -g window-status-current-format '#[fg=black]#[fg=white,bg=black] #I: #W #[fg=black,bg=default]'
-
 # set -g prefix C-s
 # bind-key h select-pane -L
 # bind-key j select-pane -D
 # bind-key k select-pane -U
 # bind-key l select-pane -R
+
+################################################
+################# Theme 1 ######################
+################################################
+
+set -g status-bg black
+set -g status-left "#[fg=yellow,bg=black]#[fg=default,bg=yellow]   #S #[fg=blue]#[fg=black,bg=blue] 󰰦 󰰑 󰰩 󰰲 #[fg=blue,bg=default] "
+set -g status-right '#[fg=green]#[fg=black,bg=green] #W #[fg=green,bg=blue]#[fg=blue,bg=blue]#[fg=black,bg=blue] %H:%M #[fg=blue,bg=yellow]#[fg=default,bg=yellow] 󰥳 #[fg=yellow,bg=black]'
+setw -g window-status-format '#[fg=yellow]#[fg=black,bg=yellow]#(omvoid-tmux-icons-helper #I) #[fg=yellow,bg=default] #[fg=red,bg=default]#W'
+setw -g window-status-current-format '#[fg=yellow]#[fg=black,bg=yellow]#(omvoid-tmux-icons-helper #I) #[fg=black,bg=yellow] #W #[fg=yellow,bg=default]'
+
+################################################
+################# Theme 2 ######################
+################################################
+
+#set -g status-bg default
+#set -g status-left "#[fg=yellow,bg=black]#[fg=default,bg=yellow]   #S #[fg=black]#[fg=white,bg=black] 󰰦 󰰑 󰰩 󰰲 #[fg=black,bg=default] "
+#set -g status-right '#[fg=black]#[fg=white,bg=black] #W #[fg=black,bg=blue]#[fg=blue,bg=blue]#[fg=black,bg=blue] %H:%M #[fg=blue,bg=yellow]#[fg=default,bg=yellow] 󰥳 #[fg=yellow,bg=black]'
+#setw -g window-status-format '#[fg=yellow]#[fg=black,bg=yellow] #(omvoid-tmux-icons-helper #I) #[fg=yellow,bg=default] #[fg=black,bg=default]#W'
+#setw -g window-status-current-format '#[fg=black]#[fg=white,bg=black] #I: #W #[fg=black,bg=default]'
 
 ################################################
 ################# Plugins ######################
