add new repo for hyprland

--- a/config/hypr/config/input.conf
+++ b/config/hypr/config/input.conf
@@ -18,12 +18,9 @@ input {
 }
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = true
-    #workspace_swipe_forever = true
-    workspace_swipe_distance = 250
-    #workspace_swipe_min_speed_to_force = 0
-    workspace_swipe_create_new = true
-    workspace_swipe_touch = true
+    gesture = 3, horizontal, workspace
+    hyprexpo-gesture = 3, up, expo
+    hyprexpo-gesture = 3, down, expo
 }
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
