--- a/config/hypr/config/keybindings.conf
+++ b/config/hypr/config/keybindings.conf
@@ -31,7 +31,7 @@ bind = $mainMod, R, exec, omvoid-cmd-radio
 bind = $mainMod, V, exec, rofi -modi clipboard:cliphist-rofi-img -show clipboard -show-icons -theme ~/.config/rofi/menu-style-clipboard.rasi
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, M, exec, nwg-dock-hyprland
-#bind = SUPER, A, hyprexpo:expo, toggle
+bind = $mainMod, E, hyprexpo:expo, toggle
 
 # Move focus with mainMod + arrow keyr
 bind = $mainMod, left, movefocus, l
