simplify input (hypr)

--- a/config/hypr/config/input.conf
+++ b/config/hypr/config/input.conf
@@ -19,8 +19,7 @@ input {
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     gesture = 3, horizontal, workspace
-    hyprexpo-gesture = 3, up, expo
-    hyprexpo-gesture = 3, down, expo
+    hyprexpo-gesture = 3, vertical, expo
 }
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
