--- a/config/hypr/config/windows.conf
+++ b/config/hypr/config/windows.conf
@@ -28,6 +28,7 @@ windowrule = size 80% 67%,class:^(rmpc)$
 windowrule = float,class:^(rmpc)$
 windowrule = float,class:^(waypaper)$
 windowrule = opacity 0.87, class:^(kitty)$
+windowrule = opacity 0.75, class:^(rmpc)$
 
 # Browser types
 windowrule = tag +chromium-based-browser, class:([cC]hrom(e|ium)|[bB]rave-browser|Microsoft-edge|Vivaldi-stable)
